# Rikkahub-desktop-StorageOptimized

./: .gitignore  HANDOVER.md  README.md  analyze-logs.ts  reasonix.toml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
Rikkahub-Desktop/: .gitignore
Rikkahub-Desktop/pc-converter/: Cargo.toml
Rikkahub-Desktop/pc-converter/src/: main.rs
Rikkahub-Desktop/pc-server/: convert.ts  server.ts
Rikkahub-Desktop/pc-server/scripts/: request-chain-smoke.ts
Rikkahub-Desktop/web-ui/app/components/message/parts/: tool-part.tsx
Rikkahub-Desktop/web-ui/app/components/ui/: drawer.tsx
Rikkahub-Desktop/web-ui/app/locales/en-US/: settings.json
Rikkahub-Desktop/web-ui/app/locales/zh-CN/: settings.json
Rikkahub-Desktop/web-ui/app/routes/: settings.tsx
Rikkahub-Desktop/web-ui/src-tauri/: tauri.conf.json
