[package]
name = "convert-pc-data"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = "s"   # optimize for size
lto = true         # link-time optimization
strip = true       # strip symbols
codegen-units = 1  # better optimization